Corrected and thinned posteriors + extra

--- a/bib1.bib
+++ b/bib1.bib
@@ -524,3 +524,11 @@
 }
 
 
+@article{romanova,
+	author = "Romanova, M. M. and Ustyugova, G. V. and Koldoba, A. V. and Lovelace, R. V. E.",
+	journal = "Astrophys.J., 610, 920-932",
+	title = "{THREE-DIMENSIONAL SIMULATIONS OF DISK ACCRETION TO AN INCLINED DIPOLE. II. HOT SPOTS AND VARIABILITY}",
+	year = "2004"
+}
+
+
