Corrections from jp

--- a/bib1.bib
+++ b/bib1.bib
@@ -532,3 +532,12 @@
 }
 
 
+@article{disc-instability,
+	author = "Lasota, Jean-Pierre",
+	journal = "New Astronomy Reviews, 45, 7, 449-508",
+	title = "{The disc instability model of dwarf novae and low-mass X-ray binary transients}",
+	year = "2001"
+}
+
+
+
