--- a/mythesis.tex
+++ b/mythesis.tex
@@ -40,6 +40,8 @@
     {Table}%
 }
 
+
+
 \def\rg{r_{\rm S}} % Schwarzschild radius
 
 \def\be{\begin{equation}}
@@ -75,7 +77,7 @@
 \def\mumax{\mu_{\rm max}}
 \def\phiobs{\phi_{\rm obs}}
 \def\ani{h}
-
+\def\thetas{\theta_{s}}
 %###
 
 %
@@ -560,31 +562,31 @@ a_{4} = +0.04\epsilon_{0}-0.15\zeta_{0}\epsilon_{0}+0.07\epsilon_{0}^{2}.
 
 \subsubsection{Geometry}
 
-Besides the geometry of the star itself, we also need to know the relations between different angles in different frames. To derive these we consider a small spot on the stellar surface at colatitude $\theta$ from the rotational pole (we follow closely the derivation of Poutanen and Beloborodov (2006) \cite{poutabelo}). 
+Besides the geometry of the star itself, we also need to know the relations between different angles in different frames. To derive these we consider a small spot on the stellar surface at colatitude $\thetas$ from the rotational pole (we follow closely the derivation of Poutanen and Beloborodov (2006) \cite{poutabelo}). 
 The star is assumed to be rotating  with a frequency $\nu=P^{-1}$ (seen by a distant observer).
 The velocity of the spot in units of $c$ (as measured by a non-rotating observer near the star)  %<- correct now?
 is 
 \begin{equation}
 \label{beta2}
-\beta = \frac{v}{c}=\frac{2\pi R(\theta)}{c} \frac{\nu}{\sqrt{1-u}} \sin\theta, 
+\beta = \frac{v}{c}=\frac{2\pi R(\thetas)}{c} \frac{\nu}{\sqrt{1-u}} \sin\thetas, 
 \end{equation}
 %=\beta_{\rm eq}(\theta) \sin\theta,
 where %$\beta_{\rm eq}$ would be constant if the star were spherical, 
-$u\equiv\rg/R(\theta)$, 
-$\rg=2GM/c^2$ is the Schwarzschild radius, $M$ is mass and $R(\theta)$ is
+$u\equiv\rg/R(\thetas)$, 
+$\rg=2GM/c^2$ is the Schwarzschild radius, $M$ is mass and $R(\thetas)$ is
 radius of the star at spot location (given by equation \ref{rtheta2}). The pulsar frequency has been corrected for the gravitational redshift $1/\sqrt{1-u}=1+z$, since the rotation frequency seen by distant observer is reduced in the gravitational field of the star due to the gravitational time dilation. The corresponding Lorentz factor for the velocity of the spot is $\Gamma=(1-\beta^2)^{-1/2}$.
 
 Because of the fast rotation and special relativistic effects, spot area $\d S^\prime$ measured in a corotating frame is not same as the area $\d S$ measured in a non-rotating frame. The instantaneous position of the spot in the fixed lab frame is described by the unit vector 
 \begin{equation}
-\bmath{r}=(\sin\theta\cos\phi, \sin\theta\sin\phi, \cos\theta),
+\bmath{r}=(\sin\thetas\cos\phi, \sin\thetas\sin\phi, \cos\thetas),
 \end{equation}
 that points to the spot from the center of the star (see Fig. ~\ref{fig:geom2}). The rotational phase of the pulsar is $\phi=2\pi\nu t$. The vector $\bmath{r}$ is not usually directed perpendicular to the surface of the spot unless if the star is spherical. The vector that points normal to the surface is given by
 \begin{equation}
-\bmath{n}=(\sin(\theta-\gamma)\cos\phi, \sin(\theta-\gamma)\sin\phi, \cos(\theta-\gamma)).
+\bmath{n}=(\sin(\thetas-\gamma)\cos\phi, \sin(\thetas-\gamma)\sin\phi, \cos(\thetas-\gamma)).
 \end{equation}
 The angle between $\bmath{n}$ and $\bmath{r}$ is $\gamma$ and 
 \begin{equation}
-\cos\gamma=[1+f^{2}(\theta)]^{-1/2},
+\cos\gamma=[1+f^{2}(\thetas)]^{-1/2},
 \end{equation}
 where
 \be \label{eq:ftheta}
@@ -617,7 +619,7 @@ We denote the unit vector along the line of sight by
 where $i$ is the inclination angle of the spin axis to the line of sight. 
 Thus (see Fig. \ref{fig:geom2})
 \be \label{eq:psi2}
-  \cos\psi=\bmath{k}\cdot \bmath{r} = \cos i\ \cos\theta+\sin i\ \sin \theta\ \cos\phi.
+  \cos\psi=\bmath{k}\cdot \bmath{r} = \cos i\ \cos\thetas+\sin i\ \sin \thetas\ \cos\phi.
 \ee
 
 The lensing angle $\psi$ measures the angle between the line of sight and the position vector $\bmath{r}$ of the spot. The initial angle of the emitted photon with respect to
@@ -673,14 +675,14 @@ where $\xi$ is the angle  between the spot velocity and the direction of the emi
 \ee
 since $\bmath{\beta} = \beta(-\sin\phi,\cos\phi,0)$ in the lab frame. Angle between the meridian % And $\epsilon$ is the angle between the meridian 
 \be
- \bmath{m} = (\cos(\theta - \gamma)\cos \phi ,\cos (\theta -\gamma)\sin \phi, -\sin (\theta -\gamma))
+ \bmath{m} = (\cos(\thetas - \gamma)\cos \phi ,\cos (\thetas -\gamma)\sin \phi, -\sin (\thetas -\gamma))
 \ee
 and $\bmath{k}_0$ is $\epsilon$, which is obtained from 
 
 \be \label{eq:kx-comp}
 \begin{split}
 \cos\epsilon= \bmath{m} \cdot \bmath{k}_0
-=\frac{\sin\alpha}{\sin\psi} (\sin i \cos(\theta -\gamma)\cos \phi -\cos i \sin (\theta -\gamma))
+=\frac{\sin\alpha}{\sin\psi} (\sin i \cos(\thetas -\gamma)\cos \phi -\cos i \sin (\thetas -\gamma))
 + \frac{\sin (\psi - \alpha)}{\sin \psi}\sin\gamma.
 %+ \frac{\sin (\psi - \alpha)}{\sin \psi}(\sin \theta \cos (\theta -\gamma)-\sin (\theta -\gamma)\cos \theta).
 \end{split}
@@ -717,10 +719,10 @@ Making use of equation (\ref{eq:k02}) the zenith angle has the value
 \be\label{eq:cossigma2}
 \begin{split}
 \cos\sigma = \bmath{k_{0}}\cdot\bmath{n} = \cos\alpha\cos\gamma+\sin\alpha\sin\gamma\cos\zeta = \\
-\cos \alpha  \cos \gamma + \frac{\sin \alpha}{\sin \psi} \sin \gamma (\cos i \sin \theta - \sin i \cos \theta \cos \phi),
+\cos \alpha  \cos \gamma + \frac{\sin \alpha}{\sin \psi} \sin \gamma (\cos i \sin \thetas - \sin i \cos \thetas \cos \phi),
 \end{split}
 \ee
-where the spherical trigonometric identity $\cos i = \cos\theta\cos\psi+\sin\theta\sin\psi\cos\zeta$ (where $\zeta$ is the angle between the spot-observer and the spot-spin-axis planes) and the equation (\ref{eq:psi2}) are used. With small bending angles the approximation $\frac{\sin \alpha}{\sin \psi} \approx \sqrt{(1-u)}$ may be used. This is based on the Beloborodov's approximation  \cite{beloborodov}
+where the spherical trigonometric identity $\cos i = \cos\thetas\cos\psi+\sin\thetas\sin\psi\cos\zeta$ (where $\zeta$ is the angle between the spot-observer and the spot-spin-axis planes) and the equation (\ref{eq:psi2}) are used. With small bending angles the approximation $\frac{\sin \alpha}{\sin \psi} \approx \sqrt{(1-u)}$ may be used. This is based on the Beloborodov's approximation  \cite{beloborodov}
 \be \label{eq:beloborodov}
 1-\cos \alpha = (1 - \cos \psi)(1 - u).
 \ee
@@ -730,7 +732,7 @@ The equation (\ref{eq:cossigma2}) is useful, since we need to know the emission 
 
 \subsubsection{Light bending}
 
-Before we can get the angle $\sigma$ from equation (\ref{eq:cossigma2}) we also first need to know how to get the angle $\alpha$ when we know the light bending angle $\psi$. The angles $\psi$ we know (for every point at every phase) directly from the geometry, since we can calculate them using the equation (\ref{eq:psi2}). In case of non-infinitesimal spot (which is discussed more in the Section 2.1.6) we of course need a  transformation of coordinates between the spot frame and the frame of the star (to get corresponding $\theta$ and $\phi$ for every point inside the spot). The angle $\psi$ is anyway straight determined, since we are going to calculate the trajectories for only those photons which are going to arrive at the observer (not in some other direction). The task is now to find out the true emission angle $\alpha$ using general relativity. 
+Before we can get the angle $\sigma$ from equation (\ref{eq:cossigma2}) we also first need to know how to get the angle $\alpha$ when we know the light bending angle $\psi$. The angles $\psi$ we know (for every point at every phase) directly from the geometry, since we can calculate them using the equation (\ref{eq:psi2}). In case of non-infinitesimal spot (which is discussed more in the Section 2.1.6) we of course need a  transformation of coordinates between the spot frame and the frame of the star (to get corresponding $\thetas$ and $\phi$ for every point inside the spot). The angle $\psi$ is anyway straight determined, since we are going to calculate the trajectories for only those photons which are going to arrive at the observer (not in some other direction). The task is now to find out the true emission angle $\alpha$ using general relativity. 
 
 The exact relation between $\alpha$ and $\psi$ (when $\alpha < \pi/2$) in Schwarzschild geometry (i.e. light bending) is given by \cite{mtw}%(e.g. Misner et al. 1973 \cite{mtw}) %\citep[e.g.][]{mtw73}
 \be \label{eq:bend2}
@@ -981,13 +983,13 @@ In the model in this thesis we assumed a spherically symmetric spot (the angle m
 
 The new versions of the waveform code have been tested by comparing the pulse profiles to profiles obtained from other theoretical models or from a similar model developed by other groups. In all comparisons we assume the neutron star to be at distance $D = 10$ kpc. In the case of spherical star we have checked that the new version gives the same results as the old one (which assumed spherical star and has been shown to give accurate results). 
 
-In the case of oblate star we have compared our light curves to those obtained by Morsink \cite{morsink} and Cadeau \cite{cadeau} (model called oblate S+D). The waveforms are computed for one small spot (we use spot angular size $\rho = 1 \degree$), which emits isotropic blackbody radiation ($R = 16.4$ km, $M = 1.4$ $\msun$, $\nu = 600$ Hz and $T_{\mathrm{eff}} = 2$ keV). The oblateness of the star is described with the function (\ref{eq:rtheta}). The results are shown in Figures \ref{fig:mor3}, \ref{fig:cad3} and \ref{fig:cad4}. They are in good agreement except in cases of some very high bending angles. In the Figure \ref{fig:mor3} ($\theta = 49 \degree$ and $i = 70 \degree$) and in the Figure \ref{fig:cad4} ($\theta = 15 \degree$ and $i = 100 \degree$) we see situations when the spot is on the other side of the pulsar and only photons with high bending angles can reach the observer. Instead in the Figure \ref{fig:cad3} ($\theta = 41 \degree$ and $i = 20 \degree$) most of the spot is all the time observed. 
+In the case of oblate star we have compared our light curves to those obtained by Morsink \cite{morsink} and Cadeau \cite{cadeau} (model called oblate S+D). The waveforms are computed for one small spot (we use spot angular size $\rho = 1 \degree$), which emits isotropic blackbody radiation ($R = 16.4$ km, $M = 1.4$ $\msun$, $\nu = 600$ Hz and $T_{\mathrm{eff}} = 2$ keV). The oblateness of the star is described with the function (\ref{eq:rtheta}). The results are shown in Figures \ref{fig:mor3}, \ref{fig:cad3} and \ref{fig:cad4}. They are in good agreement except in cases of some very high bending angles. In the Figure \ref{fig:mor3} ($\thetas = 49 \degree$ and $i = 70 \degree$) and in the Figure \ref{fig:cad4} ($\thetas = 15 \degree$ and $i = 100 \degree$) we see situations when the spot is on the other side of the pulsar and only photons with high bending angles can reach the observer. Instead in the Figure \ref{fig:cad3} ($\thetas = 41 \degree$ and $i = 20 \degree$) most of the spot is all the time observed. 
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{figure}
 \centerline{\epsfig{file=mor3test.eps,width=12.0cm}}
-\caption{Light curves (bolometric flux) for light emitted from one infinitesimal spot with $R = 16.4$ km, $M = 1.4$ $\msun$, $\nu = 600$ Hz, $\theta = 49 \degree$, $i = 70 \degree$ and $T_{\mathrm{eff}} = 2$ keV . Results are compared with the Figure 3 of Morsink et. al. (2007) \cite{morsink}. The blue dotted curve is the result of \cite{morsink} and the black solid line is our result.
+\caption{Light curves (bolometric flux) for light emitted from one infinitesimal spot with $R = 16.4$ km, $M = 1.4$ $\msun$, $\nu = 600$ Hz, $\thetas = 49 \degree$, $i = 70 \degree$ and $T_{\mathrm{eff}} = 2$ keV . Results are compared with the Figure 3 of Morsink et. al. (2007) \cite{morsink}. The blue dotted curve is the result of \cite{morsink} and the black solid line is our result.
 \label{fig:mor3}}
 \end{figure}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -996,7 +998,7 @@ In the case of oblate star we have compared our light curves to those obtained b
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{figure}
 \centerline{\epsfig{file=cad3test.eps,width=12.0cm}}
-\caption{The light curves (bolometric flux) for light emitted from one infinitesimal spot with otherwise similar same parameters as in Fig. \ref{fig:mor3} but with $\theta = 41 \degree$ and $i = 20 \degree$. The results are compared with the Figure 3 of Cadeau et. al. (2006) \cite{cadeau}. The blue dotted curve is the result of \cite{cadeau} and the black solid line is our result (almost coinciding).
+\caption{The light curves (bolometric flux) for light emitted from one infinitesimal spot with otherwise similar same parameters as in Fig. \ref{fig:mor3} but with $\thetas = 41 \degree$ and $i = 20 \degree$. The results are compared with the Figure 3 of Cadeau et. al. (2006) \cite{cadeau}. The blue dotted curve is the result of \cite{cadeau} and the black solid line is our result (almost coinciding).
 \label{fig:cad3}}
 \end{figure}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -1005,15 +1007,15 @@ In the case of oblate star we have compared our light curves to those obtained b
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{figure}
 \centerline{\epsfig{file=cad4test.eps,width=12.0cm}}
-\caption{The light curves (bolometric flux) for light emitted from one infinitesimal spot with otherwise similar same parameters as in Fig. \ref{fig:mor3} but with $\theta = 15 \degree$ and $i = 100 \degree$. The results are compared with the Figure 4 of Cadeau et. al. (2006) \cite{cadeau}. The blue dotted curve is the result of \cite{cadeau} and the black solid line is our result.
+\caption{The light curves (bolometric flux) for light emitted from one infinitesimal spot with otherwise similar same parameters as in Fig. \ref{fig:mor3} but with $\thetas = 15 \degree$ and $i = 100 \degree$. The results are compared with the Figure 4 of Cadeau et. al. (2006) \cite{cadeau}. The blue dotted curve is the result of \cite{cadeau} and the black solid line is our result.
 \label{fig:cad4}}
 \end{figure}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 
 The profiles of pulsars have also been compared to profiles obtained from light-ray tracing methods (figures \ref{fig:jpulse1},\ref{fig:jpulse2} and \ref{fig:jpulse3}), which show very similar results.%correspond each other well. 
-The number fluxes at 2 keV energy are computed to both spherical ($R(\theta) = R_{eq}$) and oblate stars ($R(\theta)$ from equation \ref{rtheta2}). Angular distribution of radiation corresponds either to a blackbody with isotropic beaming or to a Hopf profile. %so some power-law or what is the energy-dependence then....?
-In the case of spherical star ($R = 12$ km, $M = 1.6$ $\msun$, $\theta = 50 \degree$, $i = 60 \degree$ and $T_{\mathrm{eff}} = 2$ keV) we compute the light curves with two different spinning frequencies ($\nu = 1$ Hz and $\nu$ = 400 Hz) and with the spot size $\rho$ = 1 $\degree$ or 30 $\degree$ (figures \ref{fig:jpulse1} and \ref{fig:jpulse2}). In the case of oblate star ($R_{\mathrm{eq}} = 12$ km, $M = 1.4$ $\msun$, $\nu = 700$ Hz, $i = 45 \degree$, $\rho = 10 \degree$ and $T_{\mathrm{eff}} = 2$ keV) we show the light curves with three different spot colatitudes $\theta$  = 18 $\degree$, 35 $\degree$ and 90 $\degree$ for the isotropic blackbody.
+The number fluxes at 2 keV energy are computed to both spherical ($R(\thetas) = R_{eq}$) and oblate stars ($R(\thetas)$ from equation \ref{rtheta2}). Angular distribution of radiation corresponds either to a blackbody with isotropic beaming or to a Hopf profile. %so some power-law or what is the energy-dependence then....?
+In the case of spherical star ($R = 12$ km, $M = 1.6$ $\msun$, $\thetas = 50 \degree$, $i = 60 \degree$ and $T_{\mathrm{eff}} = 2$ keV) we compute the light curves with two different spinning frequencies ($\nu = 1$ Hz and $\nu$ = 400 Hz) and with the spot size $\rho$ = 1 $\degree$ or 30 $\degree$ (figures \ref{fig:jpulse1} and \ref{fig:jpulse2}). In the case of oblate star ($R_{\mathrm{eq}} = 12$ km, $M = 1.4$ $\msun$, $\nu = 700$ Hz, $i = 45 \degree$, $\rho = 10 \degree$ and $T_{\mathrm{eff}} = 2$ keV) we show the light curves with three different spot colatitudes $\thetas$  = 18 $\degree$, 35 $\degree$ and 90 $\degree$ for the isotropic blackbody.
 
 
 %Show here some profiles..
@@ -1023,7 +1025,7 @@ In the case of spherical star ($R = 12$ km, $M = 1.6$ $\msun$, $\theta = 50 \deg
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{figure}
 \centerline{\epsfig{file=jpulsec1.pdf,width=17.0cm}}
-\caption{The light curve (monochromatic number flux at 2 keV) comparisons with slowly rotating spherical star ($R = 12$ km, $M = 1.6$ $\msun$, $\nu = 1$ Hz, $i = 60 \degree$, $\theta = 50 \degree$ and $T_{\mathrm{eff}} = 2$ keV) emitting according to blackbody law or Hopf profile with spot size either 1 or 30 degrees. Black solid line shows the pulse profiles computed using the methods described in this Thesis (S+D) and red dashed line is a profile computed with the light-ray tracing methods (LTM). The residuals are shown in the lower panel as $\Delta = (\mathrm{model}_{\mathrm{S+D}}/\mathrm{model}_{\mathrm{LTM}})*100$ \%. Figure from Nättilä and Pihajoki (in preparation).
+\caption{The light curve (monochromatic number flux at 2 keV) comparisons with slowly rotating spherical star ($R = 12$ km, $M = 1.6$ $\msun$, $\nu = 1$ Hz, $i = 60 \degree$, $\thetas = 50 \degree$ and $T_{\mathrm{eff}} = 2$ keV) emitting according to blackbody law or Hopf profile with spot size either 1 or 30 degrees. Black solid line shows the pulse profiles computed using the methods described in this Thesis (S+D) and red dashed line is a profile computed with the light-ray tracing methods (LTM). The residuals are shown in the lower panel as $\Delta = (\mathrm{model}_{\mathrm{S+D}}/\mathrm{model}_{\mathrm{LTM}})*100$ \%. Figure from Nättilä and Pihajoki (in preparation).
 \label{fig:jpulse1}}
 \end{figure}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -1041,7 +1043,7 @@ In the case of spherical star ($R = 12$ km, $M = 1.6$ $\msun$, $\theta = 50 \deg
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{figure}
 \centerline{\epsfig{file=jpulsec3.pdf,width=17.0cm}}
-\caption{The light curve (monochromatic number flux at 2 keV) comparisons with an oblate star ($R_{\mathrm{eq}} = 12$ km, $M = 1.4$ $\msun$, $\nu = 700$ Hz, $i = 45 \degree$, $\rho = 10 \degree$ and $T_{\mathrm{eff}} = 2$ keV) emitting according to blackbody law or Hopf profile with different spot colatitudes: $\theta$ = 18 $\degree$, 45 $\degree$ and 90 $\degree$. The symbols are the same as in figures \ref{fig:jpulse1} and \ref{fig:jpulse2}. Figure from Nättilä and Pihajoki (in preparation).
+\caption{The light curve (monochromatic number flux at 2 keV) comparisons with an oblate star ($R_{\mathrm{eq}} = 12$ km, $M = 1.4$ $\msun$, $\nu = 700$ Hz, $i = 45 \degree$, $\rho = 10 \degree$ and $T_{\mathrm{eff}} = 2$ keV) emitting according to blackbody law or Hopf profile with different spot colatitudes: $\thetas$ = 18 $\degree$, 45 $\degree$ and 90 $\degree$. The symbols are the same as in figures \ref{fig:jpulse1} and \ref{fig:jpulse2}. Figure from Nättilä and Pihajoki (in preparation).
 \label{fig:jpulse3}}
 \end{figure}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -1208,12 +1210,12 @@ As mentioned earlier the aim of this work is to determine the probability distri
 The synthetic data in this work is made to resemble the real observations as closely as possible. The X-ray count data from \source \ is used as a reference. The amplitude of the modulation in the normalized number fluxes have been set close to the same value in the synthetic data as in the observations. We also use the same energy intervals and same number of phase points as in the real data. The original data is shown in the Figure \ref{fig:saxdata}.  
 
 
-The parameters of the pulse profile model are chosen such that their values are physically reasonable and they produce a light curve similar to the SAX-data. The physical parameters are given in the Table \ref{table:params}. The observed variability amplitude (see equation \ref{eq:amplitude}) is then obtained by choosing inclination $i$ and the colatitude of the spot $\theta$ appropriately, since the amplitude can be approximated (neglecting the Doppler effect and using the Beloborodov's approximation \cite{poutaviironen})
+The parameters of the pulse profile model are chosen such that their values are physically reasonable and they produce a light curve similar to the SAX-data. The physical parameters are given in the Table \ref{table:params}. The observed variability amplitude (see equation \ref{eq:amplitude}) is then obtained by choosing inclination $i$ and the colatitude of the spot $\thetas$ appropriately, since the amplitude can be approximated (neglecting the Doppler effect and using the Beloborodov's approximation \cite{poutaviironen})
 \be \label{eq:amplitude_incthet}
-A \approx \frac{(1-\rg/R)\sin i \sin \theta}{\rg/R+(1-\rg/R)\cos i \cos \theta}.
+A \approx \frac{(1-\rg/R)\sin i \sin \thetas}{\rg/R+(1-\rg/R)\cos i \cos \thetas}.
 \ee 
 
-We see that $i$ and $\theta$ can be changed in the equation (\ref{eq:amplitude_incthet}) without affecting the amplitude. The exact calculation shows also only a small difference between these two parameters. Thus we have created two identical synthetic datasets which differ only in $i$ and $\theta$. We call them datasets for polar and equatorial spots even though the spots are not exactly at the pole or equator. 
+We see that $i$ and $\thetas$ can be changed in the equation (\ref{eq:amplitude_incthet}) without affecting the amplitude. The exact calculation shows also only a small difference between these two parameters. Thus we have created two identical synthetic datasets which differ only in $i$ and $\thetas$. We call them datasets for polar and equatorial spots even though the spots are not exactly at the pole or equator. 
 
 The datasets have been generated using our pulse profile model. Since the observed data always includes noise, we want to have it also in our synthetic data. For this reason a different random number, from a normal distribution with mean equal to zero, is added to the original flux at each phase point. The average size of this random number have been chosen to match closely the known errors of the \source \ data. Thus a relatively larger noise has been added to the highest energy channels, where the count rates are lowest. The normalized synthetic spectral fluxes and their errors (amount of noise added) are shown in the Figures (\ref{fig:syntpol2}) and (\ref{fig:synteq2}).
 
@@ -1222,7 +1224,7 @@ The datasets have been generated using our pulse profile model. Since the observ
 
 
 
-In our simulations we see how the two datasets with different $i-\theta$ solutions can be separated from each other at least with help of the polarization information giving constraints to $i$ to $\theta$. We also show their effect on the constraints of mass and radius, which are our parameters of interest. 
+In our simulations we see how the two datasets with different $i-\thetas$ solutions can be separated from each other at least with help of the polarization information giving constraints to $i$ to $\thetas$. We also show their effect on the constraints of mass and radius, which are our parameters of interest. 
 
 
 
@@ -1238,7 +1240,7 @@ In our simulations we see how the two datasets with different $i-\theta$ solutio
       Radius $R$ & 12.0 km  \\ \hline
       Mass $M$ & 1.5 $\msun$  \\ \hline
       Inclination $i$ & 5 $\degree$ or 75 $\degree$ \\ \hline
-      Spot colatitude $\theta$ & 75 $\degree$ or 5 $\degree$ \\ \hline
+      Spot colatitude $\thetas$ & 75 $\degree$ or 5 $\degree$ \\ \hline
       Spot angular size $\rho$ & 10.0 $\degree$  \\ \hline
       Distance $D$ & 2.5 kpc \\ \hline
       Temperature $T_{\mathrm{eff}}$ & 2.0 keV \\
@@ -1259,7 +1261,7 @@ In our simulations we see how the two datasets with different $i-\theta$ solutio
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{figure}
 \centerline{\epsfig{file=synt_sax_pol2.png,width=17.0cm}}
-\caption{Synthetic data: Normalized number fluxes as a function of the phase at different energies for $i = 75 \deg$ and $\theta = 5 \deg$. The phase is from 0 to 1. Other parameters are shown in Table \ref{table:params}.
+\caption{Synthetic data: Normalized number fluxes as a function of the phase at different energies for $i = 75 \deg$ and $\thetas = 5 \deg$. The phase is from 0 to 1. Other parameters are shown in Table \ref{table:params}.
 \label{fig:syntpol2}}
 \end{figure}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -1268,7 +1270,7 @@ In our simulations we see how the two datasets with different $i-\theta$ solutio
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{figure}
 \centerline{\epsfig{file=synt_sax_eq2.png,width=17.0cm}}
-\caption{Synthetic data: Normalized number fluxes as a function of the phase at different energies for $i = 5 \deg$ and $\theta = 75 \deg$. The phase is from 0 to 1. Other parameters are shown in Table \ref{table:params}.
+\caption{Synthetic data: Normalized number fluxes as a function of the phase at different energies for $i = 5 \deg$ and $\thetas = 75 \deg$. The phase is from 0 to 1. Other parameters are shown in Table \ref{table:params}.
 \label{fig:synteq2}}
 \end{figure}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -1304,7 +1306,7 @@ As a second step we make the prior probabilities of inclination and spot colatit
 \alpha = Z^{N-1}\frac{p(D|Y)p(Y)}{p(D|X_{t})p(X_{t})}.
 \ee
 
-It is not obvious what kind of prior probabilities one should use. It depends on how informative constraints we are able to get from the observations to the given parameter. Unlike in the case of the usual flux, the measured polarization differ significantly if $i$ and $\theta$ are switched \cite{poutaviironen}. Thus from modeling the polarization we can get the prior probability distributions to these parameters. In this thesis we choose to use normally distributed prior probabilities of $i$ and $\theta$ around $0 \degree$ or $90 \degree$ to study the effect on the posterior probabilities of mass and radius. The standard deviations for these priors are chosen to be $15 \degree$. 
+It is not obvious what kind of prior probabilities one should use. It depends on how informative constraints we are able to get from the observations to the given parameter. Unlike in the case of the usual flux, the measured polarization differ significantly if $i$ and $\thetas$ are switched \cite{poutaviironen}. Thus from modeling the polarization we can get the prior probability distributions to these parameters. In this thesis we choose to use normally distributed prior probabilities of $i$ and $\thetas$ around $0 \degree$ or $90 \degree$ to study the effect on the posterior probabilities of mass and radius. The standard deviations for these priors are chosen to be $15 \degree$. 
 
 Other prior probabilities of the parameters are kept always uniform inside their sampling intervals. The sizes of these intervals are the same as the sizes of the corresponding axes in the posterior probability Figures in the next section. 
 
@@ -1333,11 +1335,11 @@ Before obtaining the final posterior probability distributions we have reduced t
 
 The same averaged steps are also used in Figure \ref{fig:acexample}, where we show an example of the autocorrelation. The autocorrelations of all the six ensembles from one simulation are presented using the weights as observables (see equation \ref{eq:autocovariance}). The Figure shows the autocorrelation only approximatively, since one should make sure that the ensemble averaged weights are calculated for walkers being at a same state of their sequence. We may however see that in general the correlation is not very strong, and we have reduced it by taking every fifth sample from the chain.%... Thinning we used is .... (TBD)  
 
-The results of our samplings are presented in the Figures \ref{fig:polpost}-\ref{fig:eqpostpr}. From these posterior probability distributions we can easily see how the prior information of angles $\theta$ and $i$ improves the fits of the mass and radius of the neutron star (by comparing Figures \ref{fig:polpostpr} and \ref{fig:polpost} or Figures \ref{fig:eqpostpr} and \ref{fig:eqpost}). 
+The results of our samplings are presented in the Figures \ref{fig:polpost}-\ref{fig:eqpostpr}. From these posterior probability distributions we can easily see how the prior information of angles $\thetas$ and $i$ improves the fits of the mass and radius of the neutron star (by comparing Figures \ref{fig:polpostpr} and \ref{fig:polpost} or Figures \ref{fig:eqpostpr} and \ref{fig:eqpost}). 
 
-Without the prior information we get the highest probabilities for the lowest masses and radii, since those correspond to more possible solutions in  $\theta$ and $i$ than the highest masses and radii. In this case we are only able to get upper limits to the mass and radius. The polar and equatorial spots give very similar results compared to each other as excepted (Figures \ref{fig:polpost} and \ref{fig:eqpost}). However they are not identical, which shows that switching $\theta$ and $i$ has a significant (but not very large) effect on the light curves of the pulsar. It seems also slightly easier to find the correct $\theta$-$i$ solution  in the case of the equatorial spot (although in the one-dimensional histograms the small angles give always a higher peak in the probability density because of the marginalization and the shape of two-dimensional distribution of $\theta$-$i$). 
+Without the prior information we get the highest probabilities for the lowest masses and radii, since those correspond to more possible solutions in  $\thetas$ and $i$ than the highest masses and radii. In this case we are only able to get upper limits to the mass and radius. The polar and equatorial spots give very similar results compared to each other as excepted (Figures \ref{fig:polpost} and \ref{fig:eqpost}). However they are not identical, which shows that switching $\thetas$ and $i$ has a significant (but not very large) effect on the light curves of the pulsar. It seems also slightly easier to find the correct $\thetas$-$i$ solution  in the case of the equatorial spot (although in the one-dimensional histograms the small angles give always a higher peak in the probability density because of the marginalization and the shape of two-dimensional distribution of $\thetas$-$i$). 
 
-In case of non-uniform priors for $\theta$ and $i$ (Figures \ref{fig:polpostpr} and \ref{fig:eqpostpr}) we find the correct solutions for $\theta$ and $i$ even though our prior distributions are not centered  around the correct values. The posterior probability distributions for the mass and radius are now also distributed on both sides of the correct values having the maximum near the correct value. Most importantly both the lower and upper limits can now be determined. 
+In case of non-uniform priors for $\thetas$ and $i$ (Figures \ref{fig:polpostpr} and \ref{fig:eqpostpr}) we find the correct solutions for $\thetas$ and $i$ even though our prior distributions are not centered  around the correct values. The posterior probability distributions for the mass and radius are now also distributed on both sides of the correct values having the maximum near the correct value. Most importantly both the lower and upper limits can now be determined. 
 
 The angular size of the spot $\rho$ is found to be the closest to the correct value of all the  parameters in our sampling. The highest probability is very close to $10 \degree$, which is the value used when creating the datasets. Partly this is due to the choice to sample the distance in a quite small interval (between 2 and 3 kpc). For that reason the size of the spot cannot change very much in order to keep the observed count rate at a correct level. 
 
@@ -1346,7 +1348,7 @@ The angular size of the spot $\rho$ is found to be the closest to the correct va
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{figure}
 \centerline{\epsfig{file=fpol.pdf,width=17.0cm}}
-\caption{Posterior probability distributions of radius $R$, mass $m$, observer inclination $i$, spot colatitude $\theta_{s}$, spot angular size $\rho$ and distance $D$ for the polar spot with only uniform priors. The one-dimensional distributions are normalized to give 1 as the total probability. The dark orange color shows a one $\sigma_{E}$ and the light orange color a two $\sigma_{E}$ credibility interval. In the 2D posterior distributions the solid contour shows a 95 \% and the dashed contour a 68 \% credibility region.  
+\caption{Posterior probability distributions of radius $R$, mass $m$, observer inclination $i$, spot colatitude $\thetas$, spot angular size $\rho$ and distance $D$ for the polar spot with only uniform priors. The one-dimensional distributions are normalized to give 1 as the total probability. The dark orange color shows a 68 \% and the light orange color a two 95 \% credibility interval. In the 2D posterior distributions the solid contour shows a 95 \% and the dashed contour a 68 \% credibility region.  
 \label{fig:polpost}}
 \end{figure}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -1354,7 +1356,7 @@ The angular size of the spot $\rho$ is found to be the closest to the correct va
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{figure}
 \centerline{\epsfig{file=fpolpr.pdf,width=17.0cm}}
-\caption{Posterior probability distributions of radius $R$, mass $m$, observer inclination $i$, spot colatitude $\theta_{s}$, spot angular size $\rho$ and distance $D$ for the polar spot with non-uniform $i$ and $\theta$ priors (shown with a blue line). The one-dimensional distributions are normalized to give 1 as the total probability. The dark orange color shows a one $\sigma_{E}$ and the light orange color a two $\sigma_{E}$ credibility interval. In the 2D posterior distributions the solid contour shows a 95 \% and the dashed contour a 68 \% credibility region.
+\caption{Posterior probability distributions of radius $R$, mass $m$, observer inclination $i$, spot colatitude $\thetas$, spot angular size $\rho$ and distance $D$ for the polar spot with non-uniform $i$ and $\thetas$ priors (shown with a blue line). The one-dimensional distributions are normalized to give 1 as the total probability. The dark orange color shows a 68 \% and the light orange color a two 95 \% credibility interval. In the 2D posterior distributions the solid contour shows a 95 \% and the dashed contour a 68 \% credibility region.
 \label{fig:polpostpr}}
 \end{figure}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -1364,7 +1366,7 @@ The angular size of the spot $\rho$ is found to be the closest to the correct va
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{figure}
 \centerline{\epsfig{file=feq.pdf,width=17.0cm}}
-\caption{Posterior probability distributions of radius $R$, mass $m$, observer inclination $i$, spot colatitude $\theta_{s}$, spot angular size $\rho$ and distance $D$ for the equatorial spot with only uniform priors.The one-dimensional distributions are normalized to give 1 as the total probability. The dark orange color shows a one $\sigma_{E}$ and the light orange color a two $\sigma_{E}$ credibility interval. In the 2D posterior distributions the solid contour shows a 95 \% and the dashed contour a 68 \% credibility region.
+\caption{Posterior probability distributions of radius $R$, mass $m$, observer inclination $i$, spot colatitude $\thetas$, spot angular size $\rho$ and distance $D$ for the equatorial spot with only uniform priors.The one-dimensional distributions are normalized to give 1 as the total probability. The dark orange color shows a 68 \% and the light orange color a two 95 \% credibility interval. In the 2D posterior distributions the solid contour shows a 95 \% and the dashed contour a 68 \% credibility region.
 \label{fig:eqpost}}
 \end{figure}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -1374,7 +1376,7 @@ The angular size of the spot $\rho$ is found to be the closest to the correct va
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{figure}
 \centerline{\epsfig{file=feqpr.pdf,width=17.0cm}}
-\caption{Posterior probability distributions of radius $R$, mass $m$, observer inclination $i$, spot colatitude $\theta_{s}$, spot angular size $\rho$ and distance $D$ for the equatorial spot with non-uniform $i$ and $\theta$ priors (shown with a blue line). The one-dimensional distributions are normalized to give 1 as the total probability. The dark orange color shows a one $\sigma_{E}$ and the light orange color a two $\sigma_{E}$ credibility interval. In the 2D posterior distributions the solid contour shows a 95 \% and the dashed contour a 68 \% credibility region.
+\caption{Posterior probability distributions of radius $R$, mass $m$, observer inclination $i$, spot colatitude $\theta_{s}$, spot angular size $\rho$ and distance $D$ for the equatorial spot with non-uniform $i$ and $\thetas$ priors (shown with a blue line). The one-dimensional distributions are normalized to give 1 as the total probability. The dark orange color shows a 68 \% and the light orange color a two 95 \% credibility interval. In the 2D posterior distributions the solid contour shows a 95 \% and the dashed contour a 68 \% credibility region.
 \label{fig:eqpostpr}}
 \end{figure}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
