--- a/mythesis.tex
+++ b/mythesis.tex
@@ -181,7 +181,7 @@ First of all, I would like to thank my supervisors Professor Juri Poutanen and J
 Rapidly rotating neutron stars, called pulsars, are the lighthouses of the universe. Pulses can be observed when an electromagnetic beam from this neutron star is emitted towards the Earth.  In some cases this emission may be created when matter is accreted onto the magnetic poles at the surface of the pulsar. Light curves from these pulses can be detected in many wavelengths. For example the most rapidly rotating accreting pulsars, called accreting millisecond pulsars, 
 have been detected in the radio, X-ray, and gamma ray bands of the electromagnetic spectrum. %The rapidly rotating pulsars are called millisecond pulsars.
 
-The exact shape of the pulses may reveal us important information about the properties of the neutron stars. The determination of the mass-radius relation of neutron stars through observations is one of the fundamental problems in astrophysics. This information could provide tight constraints on the equation of state of the ultra-dense matter located inside neutron stars \cite{lattimer2007}, \cite{hebeler}. Densities of this high are otherwise unattainable.
+The exact shape of the pulses may reveal us important information about the properties of the neutron stars. The determination of the mass-radius relation of neutron stars through observations is one of the fundamental problems in astrophysics. This information could provide tight constraints on the equation of state of the ultra-dense matter located inside neutron stars \cite{lattimer2007} \cite{hebeler}. Densities of this high are otherwise unattainable.
 %This high densities of cold matter is otherwise unattainable. 
 Studies of the light curves of pulsars can therefore help to determine the properties of such matter. The properties of matter at extremely high densities are also among the most important questions in physics and astronomy. 
 
@@ -267,7 +267,7 @@ massive star (>8$M_{\odot}$) at the end of its life. The collapse also triggers 
  R > \frac{2GM}{c^{2}},
 \ee 
 where $G$ is the gravitational constant and $c$ is the speed of light, %constrains the possible mass %and radius of neutron stars.
-differentiates neutron stars from black holes. More compact objects (for which $R < 2GM/c^{2}$) are inside the event horizon, which means that the light cannot escape the object.
+differentiates neutron stars from black holes. More compact objects (for which $R < 2GM/c^{2}$) are inside the event horizon meaning that the light cannot escape the object.
 
 
 A more strict upper bound to the compactness (ratio between the mass and radius) of a neutron star follows
@@ -382,7 +382,7 @@ After that, many different classes of pulsars have been discovered including low
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %ROMANOCVA : http://iopscience.iop.org/article/10.1086/421867/pdf
 
-The transfer of mass occurs in all known AMXPs via a Roche lobe overflow from the donor star. The equipotential surface of the binary systems gravitational and centrifugal forces (surrounding the star) is known as Roche lobe. Both the neutron star and the companion have their own lobes that  only join at the inner Lagrangian point $L_{1}$ \cite{frank85}. %http://adsabs.harvard.edu/abs/1985Sci...230.1269F (book in Tuorla)
+The transfer of mass occurs in all known AMXPs via a Roche lobe overflow from the donor star. The equipotential surface of the binary systems gravitational and centrifugal forces (surrounding the star) is known as Roche lobe. Both the neutron star and the companion have their own lobes that only join at the inner Lagrangian point $L_{1}$ \cite{frank85}. %http://adsabs.harvard.edu/abs/1985Sci...230.1269F (book in Tuorla)
 In case when the Roche lobe of the companion star is full of matter, the gas left outside the companion's Roche Lobe starts to flow towards neutron star through $L_{1}$. An accretion disk is formed because of the rotation of the system of two stars.
  
 
@@ -522,15 +522,15 @@ In these equations $R_{\mathrm{eq}}$ is the radius of the rotating star measured
 
 One other model we have also used in pulse profile comparison was presented by Morsink et al. (2007) \cite{morsink}. In that model
 \be\label{eq:rtheta}
-\frac{R(\theta)}{R_{eq}} = 1 + \sum\limits_{n=0}^2 a_{2n}(\bar{\zeta},\bar{\epsilon})P_{2n}(\cos(\theta)), 
+\frac{R(\theta)}{R_{\mathrm{eq}}} = 1 + \sum\limits_{n=0}^2 a_{2n}(\bar{\zeta},\bar{\epsilon})P_{2n}(\cos(\theta)), 
 \ee
 where $P_{n}(\cos(\theta))$ is the Legendre polynomial of order $n$ and parameters $\bar{\zeta}$ and $\bar{\epsilon}$ are obtained from
 \be\label{eq:parzeta}
-\bar{\zeta} = \frac{GM}{R_{eq}c^{2}}
+\bar{\zeta} = \frac{GM}{R_{\mathrm{eq}}c^{2}}
 \ee
 and
 \be\label{eq:parepsilon}
-\bar{\epsilon} = \frac{\Omega^{2}R_{eq}^{3}}{GM}.
+\bar{\epsilon} = \frac{\Omega^{2}R_{\mathrm{eq}}^{3}}{GM}.
 \ee
 The coefficients needed are given as
 \be\label{eq:azero}
@@ -968,7 +968,7 @@ In the model in this thesis we assumed a spherically symmetric spot (the angle m
 
 The new versions of the waveform code have been tested by comparing the pulse profiles to profiles obtained from other theoretical models or from a similar model developed by other groups. In all comparisons we assume the neutron star to be at distance $D = 10$ kpc. In the case of spherical star we have checked that the new version gives the same results as the old one (which assumed spherical star and has been shown to give accurate results). 
 
-In the case of oblate star we have compared our light curves to those obtained by Morsink \cite{morsink} and Cadeau \cite{cadeau} (model called oblate S+D). The waveforms are computed for one small spot (we use spot angular size $\rho = 1 \degree$), which emits isotropic blackbody radiation ($R = 16.4$ km, $M = 1.4$ $\msun$, $\nu = 600$ Hz and $T_{\mathrm{eff}} = 2$ keV). The oblateness of the star is described with the function (\ref{eq:rtheta}). The results are shown in Figures \ref{fig:mor3}, \ref{fig:cad3} and \ref{fig:cad4}. They are in good agreement except in cases of some very high bending angles. In the Figure \ref{fig:mor3} ($\thetas = 49 \degree$ and $i = 70 \degree$) and in the Figure \ref{fig:cad4} ($\thetas = 15 \degree$ and $i = 100 \degree$) we see situations when the spot is on the other side of the pulsar and only photons with high bending angles can reach the observer. Instead in the Figure \ref{fig:cad3} ($\thetas = 41 \degree$ and $i = 20 \degree$) most of the spot is all the time observed. 
+In the case of oblate star we have compared our light curves to those obtained by Morsink \cite{morsink} and Cadeau \cite{cadeau} (model called oblate S+D). The waveforms are computed for one small spot (we use spot angular size $\rho = 1 \degree$), which emits isotropic blackbody radiation ($R = 16.4$ km, $M = 1.4$ $\msun$, $\nu = 600$ Hz, and $T_{\mathrm{eff}} = 2$ keV). The oblateness of the star is described with the function (\ref{eq:rtheta}). The results are shown in Figures \ref{fig:mor3}, \ref{fig:cad3} and \ref{fig:cad4}. They are in good agreement except in cases of some very high bending angles. In the Figure \ref{fig:mor3} ($\thetas = 49 \degree$ and $i = 70 \degree$) and in the Figure \ref{fig:cad4} ($\thetas = 15 \degree$ and $i = 100 \degree$) we see situations when the spot is on the other side of the pulsar and only photons with high bending angles can reach the observer. Instead in the Figure \ref{fig:cad3} ($\thetas = 41 \degree$ and $i = 20 \degree$) most of the spot is all the time observed. 
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -1042,7 +1042,7 @@ In the case of spherical star ($R = 12$ km, $M = 1.6$ $\msun$, $\thetas = 50 \de
 %http://math.nyu.edu/~mjlewis/foo.pdf %about Monte Carlo
 
 The model presented in the previous section can be used to constrain parameters of neutron stars by using Bayesian inference. We can fit the observed data to the model and use Markov Chain Monte Carlo (MCMC) methods to integrate over the parameter space to find the most probable values for the parameters of the model \cite{mc_methods_book}. The data can also be synthetic (as in this thesis) in order to test our methods and tools. %if the sampler will actually find the same values that were used when generating the data. 
-Previously the constraints of neutron star masses and radii with synthetic data have been studied e.g. by Ka Ho Lo et al, 2013 \cite{miller}. %(for future space missions).   
+Previously the constraints of neutron star masses and radii with synthetic data have been studied e.g., by Ka Ho Lo et al, 2013 \cite{miller}. %(for future space missions).   
 More about the synthetic data of this thesis is presented in the Results section. 
 
 The aim of this work is to determine the most probable ("best-fit") values of the parameters in the pulse profile model, given the "observed" \ 
@@ -1202,7 +1202,7 @@ A \approx \frac{(1-\rg/R)\sin i \sin \thetas}{\rg/R+(1-\rg/R)\cos i \cos \thetas
 
 We see that $i$ and $\thetas$ can be changed in the equation (\ref{eq:amplitude_incthet}) without affecting the amplitude. The exact calculation shows also only a small difference between these two parameters. Thus we have created two identical synthetic datasets which differ only in $i$ and $\thetas$. We call them datasets for polar and equatorial spots even though the spots are not exactly at the pole or equator. 
 
-The datasets have been generated using our pulse profile model. Since the observed data always includes noise, we want to have it also in our synthetic data. For this reason a different random number, from a normal distribution with mean equal to zero, is added to the original flux at each phase point. The average size of this random number have been chosen to match closely the known errors of the \source \ data. Thus a relatively larger noise has been added to the highest energy channels where the count rates are lowest. The normalized synthetic spectral fluxes and their errors (amount of noise added) are shown in the Figures (\ref{fig:syntpol2}) and (\ref{fig:synteq2}).
+The datasets have been generated using our pulse profile model. Since the observed data always includes noise, we want to have it also in our synthetic data. For this reason a different random number, from a normal distribution with mean equal to zero, is added to the original flux at each phase point. The average size of this random number have been chosen to match closely the known errors of the \source \ data. Thus a relatively larger noise has been added to the highest energy channels where the count rates are lowest. The normalized synthetic spectral fluxes and their errors (amount of noise added) are shown in the Figures \ref{fig:syntpol2} and \ref{fig:synteq2}.
 
 
 %They have been created using the pulse profile model and adding random Gaussian noise %to the fluxes for every phase point. A larger noise was added to the highest energy %channels. 
@@ -1326,7 +1326,7 @@ Without the prior information we get the highest probabilities for the lowest ma
 
 In case of non-uniform priors for $\thetas$ and $i$ (Figures \ref{fig:polpostpr} and \ref{fig:eqpostpr}) we find the correct solutions for $\thetas$ and $i$ even though our prior distributions are not centered  around the correct values. The posterior probability distributions for the mass and radius are now also distributed on both sides of the correct values having the maximum near the correct value. Most importantly both the lower and upper limits can now be determined. 
 
-The angular size of the spot $\rho$ is found to be the closest to the correct value of all the  parameters in our sampling. The highest probability is very close to $10 \degree$ which is the value used when creating the datasets. Partly this is due to the choice to sample the distance in a quite small interval (between 2 and 3 kpc). For that reason the size of the spot cannot change very much in order to keep the observed count rate at a correct level. 
+The angular size of the spot $\rho$ is found to be the closest to the correct value from all the  parameters in our sampling. The highest probability is very close to $10 \degree$ which is the value used when creating the datasets. Partly this is due to the choice to sample the distance in a quite small interval (between 2 and 3 kpc). For that reason the size of the spot cannot change very much in order to keep the observed count rate at a correct level. 
 
 
 
